package DandA.kz.model;

public enum OrderStatus {
    RECEIVED,
    PREPARING,
    READY,
    DELIVERED,
    CANCELED
}